# study

./: .gitignore  Leshchuk_5_2024_25_tasks.ipynb  README.md  Tasks_1.ipynb
.obsidian/: app.json  workspace.json
Algebra/: Важное.md  Матрицы (04.09).md
Test/: c.cpp  c.py  j.cpp  j.py
algebra/: Важное.md  ДЗ 1.md  Матрицы (04.09).md  Операции над матрицами (11.09).md  Преобразования и СЛУ (11.09).md
algorithms/: Aлгоритмы (10.09).md  Aлгоритмы и МТ (10.09).md  Важное.md
algorithms/prac/2/: CMakeLists.txt  queue.cpp
algorithms_and_data_structures/cf_01/: p1_test.cpp  p4.cpp
algorithms_and_data_structures/cf_02/: p1.cpp  p2.cpp  p3.cpp  p5_cheat.cpp
algorithms_and_data_structures/cf_05/: 1.cpp  2.cpp  3.cpp  HashTable.h  bloom_filter.h
algorithms_and_data_structures/cf_06/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp
algorithms_and_data_structures/cf_07/: .6.cpp.swp  1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp
algorithms_and_data_structures/hw_15/: 1.py  (+2 more)
calculus/: Важное.md  Формальная логика (06.09).md
calculus_python/: task4.ipynb
discrete/: Важное.md  Математическая логика (06.09).md
operating_systems/: rename.sh
python_algebra/: 05.ipynb  Leshchuk_Alg_1_2024_25_tasks.ipynb  task14.ipynb  task3.ipynb  task4.ipynb  task5.ipynb  task6.ipynb  task7.ipynb  task9.ipynb
python_calculus/: 05.ipynb  11.ipynb  12.ipynb  task1.ipynb  task10.ipynb  task14.ipynb  task2.ipynb  task6.ipynb  task7.ipynb  task9.ipynb
software_engineering/01_tmp/: .coveragerc  LICENSE  README.md  pyproject.toml
software_engineering/01_tmp/scripts/: generate_exports.py
software_engineering/01_tmp/src/swe_hw_1/cli/: dto.py
software_engineering/01_tmp/src/swe_hw_1/domain/model/: inventory.py
software_engineering/01_tmp/src/swe_hw_1/logic/: alive_dto.py  inventory.py  inventory_test.py
software_engineering/01_tmp/src/swe_hw_1/repository/: repository_test.py
sophomore/algorithms/homeworks/1/: CMakeLists.txt  queue_test.cpp
test/: a.cpp  b.cpp  d.cpp  e.cpp  f.cpp  h.cpp
(+324 files in other folders)
